--- a/Guvi-Task-/Login/Login_page.html
+++ b/Guvi-Task-/Login/Login_page.html
@@ -45,7 +45,7 @@
                     // Get value
                     // lpusername: $("input[name=lpusername]").val(),
                     // lppassword: $("input[name=lppassword]").val(),
-                    lpusername:"mshariram27@gmail.com",
+                    lpusername:"test@gmail.com",
                     lppassword:123456789,
                     action : "submit", 
                   },
